--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALber Einstein</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>Albert Einstein</title>
+    <link rel="stylesheet" href="style/estilos.css">
 </head>
 <body>
     <h1>Albert Einstein</h1>
-    <p><img src="albert.jpg" alt=""></p>
+    <p><img src="img/albert.jpg" alt=""></p>
     <p>Albert Einstein (14 de marzo de 1879
         18 de abril de 1955) fue un físico alemán de origen judío, nacionalizado después suizo y
         estadounidense. Está considerado como el científico más importante del siglo XX.</p>
